tugas untuk uts
uts weprog

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
     <section id="profil">
         <h2>Masjid Istiqlal berlokasi di Jl. Taman Wijaya Kusuma, Central Jakarta, DKI Jakarta, Indonesia</h2>
-        <p>Masjid Istiqlal ini dibangun pada tahun 1970 - 1978, Arsitek bangunan ini adalah Frederich Silaban</p>
+        <p>Masjid Istiqlal ini dibangun pada tahun 1970 - 1978, Arsitek bangunan ini adalah Frederich Silaban. Masjid ini dirancang dengan gaya modern dan memadukan elemen arsitektur Islam. Salah satu ciri khas masjid ini adalah memiliki kubah yang berdiameter 45 meter. Masjid ini dilengkapi dengan menara setinggi 96 meter, membuatnya terlihat megah. Dapat menampung sampai 200.000 jemaah, sehingga masjid ini termasuk memiliki kapasitas terbesar di dunia. Selain sebagai tempat ibadah, masjid ini juga biasanya dipakai untuk berbagai acara, seperti acara keagamaan, sosial, budaya, dan lain-lain. Masjid ini sangat mudah jika ingin diakses oleh para pengunjung, karena terletak di pusat kota Jakarta dan dekat dengan monumen nasional atau yang sering kita sebut dengan monas. Para masyarakat khususnya warga Jakarta biasanya menjadikan masjid ini sebagai pusat kegiatan perayaan hari-hari besar islam seperti idul fitri dan idul adha, serta sebagai tempat untuk pengajian.</p>
     </section>
 
     <section id="layanan">
         <h2>Fasilitas</h2>
         <ul>
-            <li>Ruang shalat yang luas</li>
-            <li>Area parkir</li>
-            <li>Kantin</li>
+            <li>Ruang shalat yang luas, bersih, dan nyaman dengan hiasan dan ornamen-ornamen yang indah</li>
+            <li>Area parkir yang luas</li>
+            <li>Kantin yang menyediakan berbagai macam makanan</li>
             <li>Toilet yang bersih</li>
             <li>Ruangan untuk kegiatan sosial dan keagamaan</li>
         </ul>
